# thesis

./: Dockerfile  README.md  docker-compose.yaml  proverka.py  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py  urls.py
nginx/: nginx.conf
nginx/html/: index.html
reservation/: admin.py  forms.py  models.py  urls.py  views.py
reservation/templates/reservation/: base.html  book_table.html  home.html  info.html  reservation_detail.html  reservation_list.html  reservation_table.html  user_statistics.html
reservation/templates/reservation/includes/: inc_footer.html  inc_menu.html
reservation/templatetags/: my_tags.py
user/: admin.py  forms.py  models.py  urls.py  views.py
user/management/commands/: create_groups.py  createadmin.py  start_mailing.py
user/templates/user/: change_password.html  login.html  password_reset.html  register.html  user_block.html  user_lists.html  user_profile.html
